// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Cascader Select 1`] = `
<InputSelect
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "11",
          },
          Object {
            "label": "选项二",
            "value": "12",
          },
        ],
        "label": "选项一",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "21",
          },
          Object {
            "label": "选项二",
            "value": "22",
          },
        ],
        "label": "选项一",
        "value": "2",
      },
    ]
  }
  itemRender={[Function]}
  onMaskClick={[Function]}
  prefixCls="za-select"
  valueMember="value"
>
  <div
    className="za-select"
    onClick={[Function]}
  >
    <div
      className="za-select-input za-select-placeholder"
    />
    <div>
      <input
        type="hidden"
        value={Array []}
      />
      <Picker
        cancelText="取消"
        dataSource={
          Array [
            Object {
              "children": Array [
                Object {
                  "label": "选项一",
                  "value": "11",
                },
                Object {
                  "label": "选项二",
                  "value": "12",
                },
              ],
              "label": "选项一",
              "value": "1",
            },
            Object {
              "children": Array [
                Object {
                  "label": "选项一",
                  "value": "21",
                },
                Object {
                  "label": "选项二",
                  "value": "22",
                },
              ],
              "label": "选项一",
              "value": "2",
            },
          ]
        }
        disabled={false}
        itemRender={[Function]}
        okText="确定"
        onCancel={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onMaskClick={[Function]}
        onOk={[Function]}
        prefixCls="za-picker"
        title="请选择"
        value={Array []}
        valueMember="value"
        visible={false}
      >
        <div
          className="za-picker"
        >
          <div
            className="za-picker-container"
            onClick={[Function]}
          >
            <Popup
              animationDuration={200}
              autoClose={false}
              direction="bottom"
              mask={true}
              maskType="normal"
              onMaskClick={[Function]}
              prefixCls="za-popup"
              stayTime={3000}
              visible={false}
            >
              <div
                className="za-popup za-popup-hidden"
              >
                <div
                  className="za-popup-wrapper za-popup-wrapper-bottom"
                  style={
                    Object {
                      "WebkitTransitionDuration": "200ms",
                      "transitionDuration": "200ms",
                    }
                  }
                >
                  <div
                    className="za-picker-wrapper"
                  >
                    <div
                      className="za-picker-header"
                    >
                      <div
                        className="za-picker-cancel"
                        onClick={[Function]}
                      >
                        取消
                      </div>
                      <div
                        className="za-picker-title"
                      >
                        请选择
                      </div>
                      <div
                        className="za-picker-submit"
                        onClick={[Function]}
                      >
                        确定
                      </div>
                    </div>
                    <div
                      className="za-picker-mask-top"
                    >
                      <div
                        className="za-picker-mask-bottom"
                      >
                        <PickerView
                          dataSource={
                            Array [
                              Object {
                                "children": Array [
                                  Object {
                                    "label": "选项一",
                                    "value": "11",
                                  },
                                  Object {
                                    "label": "选项二",
                                    "value": "12",
                                  },
                                ],
                                "label": "选项一",
                                "value": "1",
                              },
                              Object {
                                "children": Array [
                                  Object {
                                    "label": "选项一",
                                    "value": "21",
                                  },
                                  Object {
                                    "label": "选项二",
                                    "value": "22",
                                  },
                                ],
                                "label": "选项一",
                                "value": "2",
                              },
                            ]
                          }
                          disabled={false}
                          itemRender={[Function]}
                          onChange={[Function]}
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          value={Array []}
                          valueMember="value"
                        >
                          <Cascader
                            data={
                              Array [
                                Object {
                                  "children": Array [
                                    Object {
                                      "label": "选项一",
                                      "value": "11",
                                    },
                                    Object {
                                      "label": "选项二",
                                      "value": "12",
                                    },
                                  ],
                                  "label": "选项一",
                                  "value": "1",
                                },
                                Object {
                                  "children": Array [
                                    Object {
                                      "label": "选项一",
                                      "value": "21",
                                    },
                                    Object {
                                      "label": "选项二",
                                      "value": "22",
                                    },
                                  ],
                                  "label": "选项一",
                                  "value": "2",
                                },
                              ]
                            }
                            disabled={false}
                            itemRender={[Function]}
                            onChange={[Function]}
                            prefixCls="za-picker"
                            value={Array []}
                            valueMember="value"
                          >
                            <ColumnGroup
                              itemRender={[Function]}
                              onValueChange={[Function]}
                              prefixCls="za-picker"
                              selectedValue={
                                Array [
                                  "1",
                                  "11",
                                ]
                              }
                              valueMember="value"
                            >
                              <div
                                className="za-picker-column-group"
                              >
                                <div
                                  className="za-picker-column-group-item"
                                  key="0"
                                >
                                  <Column
                                    itemRender={[Function]}
                                    onValueChange={[Function]}
                                    prefixCls="za-picker"
                                    selectedValue="1"
                                    valueMember="value"
                                  >
                                    <div
                                      className="za-picker-column"
                                    >
                                      <div
                                        className="za-picker-column-indicator"
                                      />
                                      <div
                                        className="za-picker-column-content"
                                      >
                                        <div
                                          className="za-picker-column-item za-picker-column-item-selected"
                                          key="1"
                                        >
                                          选项一
                                        </div>
                                        <div
                                          className="za-picker-column-item"
                                          key="2"
                                        >
                                          选项一
                                        </div>
                                      </div>
                                    </div>
                                  </Column>
                                </div>
                                <div
                                  className="za-picker-column-group-item"
                                  key="1"
                                >
                                  <Column
                                    itemRender={[Function]}
                                    onValueChange={[Function]}
                                    prefixCls="za-picker"
                                    selectedValue="11"
                                    valueMember="value"
                                  >
                                    <div
                                      className="za-picker-column"
                                    >
                                      <div
                                        className="za-picker-column-indicator"
                                      />
                                      <div
                                        className="za-picker-column-content"
                                      >
                                        <div
                                          className="za-picker-column-item za-picker-column-item-selected"
                                          key="11"
                                        >
                                          选项一
                                        </div>
                                        <div
                                          className="za-picker-column-item"
                                          key="12"
                                        >
                                          选项二
                                        </div>
                                      </div>
                                    </div>
                                  </Column>
                                </div>
                              </div>
                            </ColumnGroup>
                          </Cascader>
                        </PickerView>
                      </div>
                    </div>
                  </div>
                </div>
                <Mask
                  className=""
                  onClose={[Function]}
                  prefixCls="za-mask"
                  style={
                    Object {
                      "WebkitAnimationDuration": "200ms",
                      "animationDuration": "200ms",
                    }
                  }
                  type="normal"
                  visible={false}
                />
              </div>
            </Popup>
          </div>
        </div>
      </Picker>
    </div>
  </div>
</InputSelect>
`;

exports[`Select Cascader Select init value 1`] = `
<div
  class="za-select"
>
  <div
    class="za-select-input"
  >
    选项一选项二
  </div>
  <div>
    <input
      type="hidden"
      value="1,12"
    />
    <div
      class="za-picker"
    >
      <div
        class="za-picker-container"
      >
        <div
          class="za-popup za-popup-hidden"
        >
          <div
            class="za-popup-wrapper za-popup-wrapper-bottom"
            style="-webkit-transition-duration:200ms;transition-duration:200ms"
          >
            <div
              class="za-picker-wrapper"
            >
              <div
                class="za-picker-header"
              >
                <div
                  class="za-picker-cancel"
                >
                  取消
                </div>
                <div
                  class="za-picker-title"
                >
                  请选择
                </div>
                <div
                  class="za-picker-submit"
                >
                  确定
                </div>
              </div>
              <div
                class="za-picker-mask-top"
              >
                <div
                  class="za-picker-mask-bottom"
                >
                  <div
                    class="za-picker-column-group"
                  >
                    <div
                      class="za-picker-column-group-item"
                    >
                      <div
                        class="za-picker-column"
                      >
                        <div
                          class="za-picker-column-indicator"
                        />
                        <div
                          class="za-picker-column-content"
                        >
                          <div
                            class="za-picker-column-item za-picker-column-item-selected"
                          >
                            选项一
                          </div>
                          <div
                            class="za-picker-column-item"
                          >
                            选项一
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="za-picker-column-group-item"
                    >
                      <div
                        class="za-picker-column"
                      >
                        <div
                          class="za-picker-column-indicator"
                        />
                        <div
                          class="za-picker-column-content"
                        >
                          <div
                            class="za-picker-column-item"
                          >
                            选项一
                          </div>
                          <div
                            class="za-picker-column-item za-picker-column-item-selected"
                          >
                            选项二
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select 1`] = `
<div
  class="za-select"
>
  <div
    class="za-select-input za-select-placeholder"
  />
  <div>
    <input
      type="hidden"
      value=""
    />
    <div
      class="za-picker"
    >
      <div
        class="za-picker-container"
      >
        <div
          class="za-popup za-popup-hidden"
        >
          <div
            class="za-popup-wrapper za-popup-wrapper-bottom"
            style="-webkit-transition-duration:200ms;transition-duration:200ms"
          >
            <div
              class="za-picker-wrapper"
            >
              <div
                class="za-picker-header"
              >
                <div
                  class="za-picker-cancel"
                >
                  取消
                </div>
                <div
                  class="za-picker-title"
                >
                  请选择
                </div>
                <div
                  class="za-picker-submit"
                >
                  确定
                </div>
              </div>
              <div
                class="za-picker-mask-top"
              >
                <div
                  class="za-picker-mask-bottom"
                >
                  <div
                    class="za-picker-column-group"
                  >
                    <div
                      class="za-picker-column-group-item"
                    >
                      <div
                        class="za-picker-column"
                      >
                        <div
                          class="za-picker-column-indicator"
                        />
                        <div
                          class="za-picker-column-content"
                        >
                          <div
                            class="za-picker-column-item za-picker-column-item-selected"
                          >
                            选项一
                          </div>
                          <div
                            class="za-picker-column-item"
                          >
                            选项二
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select render defaultValue correctly  1`] = `
<div
  class="za-select"
>
  <div
    class="za-select-input"
  >
    选项二
  </div>
  <div>
    <input
      type="hidden"
      value="2"
    />
    <div
      class="za-picker"
    >
      <div
        class="za-picker-container"
      >
        <div
          class="za-popup za-popup-hidden"
        >
          <div
            class="za-popup-wrapper za-popup-wrapper-bottom"
            style="-webkit-transition-duration:200ms;transition-duration:200ms"
          >
            <div
              class="za-picker-wrapper"
            >
              <div
                class="za-picker-header"
              >
                <div
                  class="za-picker-cancel"
                >
                  取消
                </div>
                <div
                  class="za-picker-title"
                >
                  请选择
                </div>
                <div
                  class="za-picker-submit"
                >
                  确定
                </div>
              </div>
              <div
                class="za-picker-mask-top"
              >
                <div
                  class="za-picker-mask-bottom"
                >
                  <div
                    class="za-picker-column-group"
                  >
                    <div
                      class="za-picker-column-group-item"
                    >
                      <div
                        class="za-picker-column"
                      >
                        <div
                          class="za-picker-column-indicator"
                        />
                        <div
                          class="za-picker-column-content"
                        >
                          <div
                            class="za-picker-column-item"
                          >
                            选项一
                          </div>
                          <div
                            class="za-picker-column-item za-picker-column-item-selected"
                          >
                            选项二
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
